ny uri for styring av radio

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
       <tbody>
       <tr>
         <td width="300px">
-          <iframe src="http://musica.local/" frameborder="0" height="200px" width="300px"></iframe>
+          <iframe src="/radio/" frameborder="0" height="200px" width="300px"></iframe>
         </td>
         
         <td width="340px">
