automatisk lasting av side hver halve time

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 <html>
 
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="1800" />
     <title>simple c'n'c</title>
   </head>
 
