byttet til manipulert diagram for Rudolstadt

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
       
       <tr>
         <td colspan=5>
+          <!--
           <img src="http://www.yr.no/sted/Tyskland/Th%C3%BCringen/Rudolstadt/meteogram.png"
             height="253px" />
+          -->
+          <img src="/weather_info/de_ru.png" height="253px" />
         </td>
       </tr>
       </tbody>
