ta i bruk ny versjon av radio-control

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   
   <body>
 
-    <iframe id="radio" src="http://localhost:8081/radio/test.html"></iframe>
+    <iframe id="radio" src="http://lar.local/radio/"></iframe>
 
     <div id="div_viktig">
       Diverse viktig
