--- a/templates/test.html
+++ b/templates/test.html
@@ -12,7 +12,7 @@
   <body>
     <div id="alt_innhold">
 
-      <iframe id="radio" src="http://lar.local/radio/test.html"></iframe>
+      <iframe id="radio" src="http://localhost:8081/radio/test.html"></iframe>
 
       <div id="papir"
            class="soeppel
