--- a/static/main.css
+++ b/static/main.css
@@ -3,23 +3,61 @@ body {
     padding: 0px;
 }
 
-
-#alt_innhold {
+.big {
     position: absolute;
     top: 0px;
     left: 0px;
 
-    width: 795px;
-    height: 477px;
+    width: 100%;
+    height: 100%;
+
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
-iframe {
+#clock-screen {
+    z-index: -1;
+
+    background-color: black;
+}
+
+#clock {
+    position: absolute;
+    top: 33%;
+    left: 33%;
+
+    width: 33%;
+    height: 33%;
+
+    background-color: black;
+    color: white;
+
+    display: table;
+
+    text-align: center;
+    font-family: "Courier New";
+    font-weight: 900;
+    font-size: 400%;
+}
+
+#display {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#info-screen {
+    z-index: 0;
+
+    background-color: white;
+}
+
+#radio {
     position: absolute;
     top: 0px;
     left: 0px;
 
     width: 299px;
-    height: 477px;
+    height: 480px;
 
     border: 0px;
     border-right: 1px solid black;
@@ -112,6 +150,19 @@ iframe {
     height: 247px;
 
     border-top: 1px solid black;
+}
+
+#de_ru_img {
+    position: absolute;
+    top: 227px;
+    left: 300px;
+
+    width: 495px;
+    height: 247px;
+
+    border: 0px;
+    border-top: 1px solid black;
+
 }
 
 #de_ru {
