--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,6 @@
     </div>
         
     <div id="info-screen" class="big">
-      
 
       <iframe id="radio" src="http://lar.local/radio/"></iframe>
 
@@ -52,14 +51,11 @@
         <p>Restsøppel</p>
       </div>
 
-
       <div id="div_viktig">
         Diverse viktig
       </div>
 
-<!--      <div id="vaeret"> -->
-        <iframe id="de_ru_img" src="http://localhost:8080/static/de_ru_png.html"></iframe>
-      <!-- </div> -->
+      <iframe id="de_ru_img" src="http://lar.local/static/de_ru_png.html"></iframe>
     </div>
       
   </body>
