liten mangel i clockScreen.js og endring av index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         
     <div id="info-screen" class="big">
 
-      <iframe id="radio" src="http://lar.local/radio/"></iframe>
+      <iframe id="radio" src="radio/"></iframe>
 
       <div id="papir"
            class="soeppel
@@ -54,7 +54,7 @@
         Diverse viktig
       </div>
 
-      <iframe id="de_ru_img" src="http://lar.local/static/de_ru_png.html"></iframe>
+      <iframe id="de_ru_img" src="static/de_ru_png.html"></iframe>
     </div>
       
   </body>
